# UFOExplorer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
cfg/: ExplorationPlanner.cfg
cmake/: ufoexplorerConfig.cmake.in
config/: explorer.config
include/ufoexplorer/: colors.h  explorer.h  graph_search.h  map.h  node.h  timing.h  tsp_solver.h
include/ufoexplorer/model/: robot_model.h  sensor_model.h
launch/: complex_maze.launch  explorer.launch  house.launch  mapping.launch  path_publisher.launch  simple_maze.launch  ufoexplorer.launch
rviz/: view.rviz
scripts/: ufoexplorer.bash
src/: explorer_node.cpp  trajectory_node.cpp
src/ufoexplorer/: explorer.cpp  graph_search.cpp  map.cpp  tsp_solver.cpp
